# Andor-sCMOS-examples

./: .gitignore  CMakeLists.txt  GrabImage.py  README.md  common.cpp  setup.cfg  setup.py
acquisition/: main.cpp
convertbuffer/: main.cpp
image/: main.cpp  saveAsBmp.cpp  saveAsBmp.h
include/: acquisitionmanager.h  atcore.h  atutility.h  common.h
listdevices/: main.cpp
live/: live.cpp  metadataparser.cpp
reconnect/: acquisitionmanager.h  main.cpp
serialnumber/: serialnumber.cpp
