[metadata]
name = andor_scmos
version = 0.7.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Python scripts controlling Andor plain C++. Fast and simple.
url = https://github.com/scivision/andor-scmos-examples
keywords =
  Andor
  sCMOS
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  imageio
  glymur

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
